--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,9 @@ language: go
 go:
   - master
 
+script:
+  - go vet
+  - go test -v ./...
+
 notifications:
   email: false
-
-script:
-  - go test -v ./...
